# zone

./: LICENSE  README.md  zone.cabal  zone.lock-8.0.1
main/: zone.hs
src/Zone/: Data.hs  IO.hs  Operation.hs  P.hs  Serial.hs
test/: test.hs
test/Test/Zone/: Arbitrary.hs  Serial.hs
test/data/: example.com.zone
